Chore: 변수명 및 placeholder 수정